@@ -1,4 +1,4 @@
-*** Announce on May
+*** Announce on May 8th, 2011 ***
 
 Dear Multi2Sim users:
 
